--- a/Yahoo.ipynb
+++ b/Yahoo.ipynb
@@ -6,7 +6,7 @@
       "name": "Yahoo.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOH9r14X4YlsoKP00RbPik5",
+      "authorship_tag": "ABX9TyOdO3eg5UTyTXAluE3ktOlD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,9 +49,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 269
+          "height": 251
         },
-        "outputId": "f67a8105-d63a-475a-8716-94569e47df9e"
+        "outputId": "889435a3-4d84-4b6a-d56e-2622a00a6a8d"
       },
       "source": [
         "#data=pdr.get_data_yahoo(\"INFY\",start=\"2020-05-14\",end=\"2020-05-19\")\n",
@@ -130,9 +130,26 @@
         "print(Rd)\n",
         "print(dis)\n",
         "cashflow\n",
-        "co1=int(cashflow_trans.loc[:,\"Total Cash From Operating Activities\"][0])/10000000\n"
+        "co1=int(cashflow_trans.loc[:,\"Total Cash From Operating Activities\"][0])/10000000\n",
+        "co2=int(cashflow_trans.loc[:,\"Total Cash From Operating Activities\"][1])/10000000\n",
+        "co3=int(cashflow_trans.loc[:,\"Total Cash From Operating Activities\"][2])/10000000\n",
+        "co4=int(cashflow_trans.loc[:,\"Total Cash From Operating Activities\"][3])/10000000\n",
+        "#\n",
+        "interest1        =   int(financials_trans.loc[:,\"Interest Expense\"][0])\n",
+        "interest1        =   -1*interest1/10000000\n",
+        "interest2        =   int(financials_trans.loc[:,\"Interest Expense\"][1])\n",
+        "interest2        =   -1*interest2/10000000\n",
+        "interest3        =   int(financials_trans.loc[:,\"Interest Expense\"][2])\n",
+        "interest3        =   -1*interest3/10000000\n",
+        "interest4        =   int(financials_trans.loc[:,\"Interest Expense\"][3])\n",
+        "interest4        =   -1*interest4/10000000\n",
+        "tax_shield1      =  interest1*Tc\n",
+        "tax_shield2      =  interest2*Tc\n",
+        "tax_shield3      =  interest3*Tc\n",
+        "tax_shield4      =  interest4*Tc\n",
+        "fcf1             =  co1-capex1+interest1-tax_shield1"
       ],
-      "execution_count": 51,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,18 +169,6 @@
             "0.1181143635125936\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "23754.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 51
         }
       ]
     }
